--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -22,6 +22,7 @@ h1 span{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width{
@@ -38,4 +39,28 @@ section{
 .top-banner{
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
+}
+
+p{
+    color: dimgray;
+}
+
+.dream-area{
+    background-image:url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.anchor-button{
+    text-decoration:none;
+    background: linear-gradient(45deg, lightsalmon, tomato);
+    border-radius: 5px;
+    padding: 10px 50px;
+    color: white;
+    font-weight: 700;
+
+}
+
+h2{
+    font-size: 40px;
 }
